section_bonus/158_tp_monsterstack_kustomize/k8s/prod/ingress-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monsterstack
spec:
  tls:
  - hosts:
    - prod.elie.formation.dopl.uk
    secretName: monsterstack-tls-prod
  rules:
  - host: prod.elie.formation.dopl.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
